# rust-back-end-rocket

./: .env.example  .gitignore  Cargo.toml  Rocket.toml
migrations/2024-04-21-081236_create_tasks/: up.sql
src/: main.rs  schema.rs
